fixed error with spacing

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -20,12 +20,15 @@ body {
   margin: .25em;
   border-top: 4px solid #e8e7e5;
 }
+
 .successStory p {
-  padding: 0 10% 0 10%;
+    padding: 0 10% 0 10%;
 }
+
 .successStory img {
   margin: .7em 0 .7em 0;
-  border: 4px solid #e8e7e5;
+  border: 4px solid #337ab7;
+  padding: 4px;
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -41,7 +44,7 @@ body {
 
 .sidebar img {
   margin-top: .6em;
-  border: 3px solid #a8a6a1;
+  border: 4px solid #a8a6a1;
   max-width: 60%;
 }
 
